spade-tests/src/snapshots/spade_tests__mod_namespacing__mod_but_no_file.snap
---
source: spade-tests/src/mod_namespacing.rs
---
mod submod;
            
mod subsubmod;
            

error: Did not find src/submod/subsubmod.spade or src/submod/subsubmod/main.spade
  ┌─ src/submod/main.spade:1:5
  │
1 │ mod subsubmod;
  │     ^^^^^^^^^ Did not find file for subsubmod
